Sign in Completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FirstApp">
         <activity
+            android:name=".Sign_In_Activity"
+            android:exported="false" />
+        <activity
             android:name=".SignUp_Activity"
             android:exported="false" />
         <activity
